[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "frh02",email = "farhanrahman02@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.4"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.58,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langgraph (>=0.4.3,<0.5.0)",
    "grandalf (>=0.8,<0.9)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
